@@ -37,53 +37,7 @@ using std::ifstream;
 #include "AddressDataBus.h"
 #include "components/CPUComponent.h"
 #include "FileLoader_raw.h"
-
-
-// This is basically strtoull(), but it needs to be explicitly implemented
-// since some systems lack it. (Also, compiling with GNU C++ in ANSI mode
-// does not work with strtoull.)
-static uint64_t parse_number(const char* str, bool& error)
-{
-	int base = 10;
-	uint64_t result = 0;
-	bool negative = false;
-
-	error = false;
-
-	if (str == NULL)
-		return 0;
-
-	while (*str == ' ')
-		++str;
-
-	if (*str == '-') {
-		negative = true;
-		++str;
-	}
-
-	while ((*str == 'x' || *str == 'X') || (*str >= '0' && *str <= '9')
-	    || (*str >= 'a' && *str <= 'f') || (*str >= 'A' && *str <= 'F')) {
-		if (*str == 'x' || *str == 'X') {
-			base = 16;
-		} else {
-			int n = *str - '0';
-			if (*str >= 'a' && *str <= 'f')
-				n = *str - 'a' + 10;
-			if (*str >= 'A' && *str <= 'F')
-				n = *str - 'A' + 10;
-			result = result * base + n;
-		}
-		++str;
-	}
-
-	if (*str)
-		error = true;
-
-	if (negative)
-		return -result;
-	else
-		return result;
-}
+#include "StringHelper.h"
 
 
 FileLoader_raw::FileLoader_raw(const string& filename)
@@ -162,7 +116,7 @@ bool FileLoader_raw::LoadIntoComponent(refcount_ptr<Component> component, ostrea
 	string fname = parts[parts.size() - 1];
 
 	bool error;
-	uint64_t vaddr = parse_number(strvaddr.c_str(), error);
+	uint64_t vaddr = StringHelper::ParseNumber(strvaddr.c_str(), error);
 	if (error) {
 		messages << "could not parse vaddr.\n";
 		return false;
@@ -170,7 +124,7 @@ bool FileLoader_raw::LoadIntoComponent(refcount_ptr<Component> component, ostrea
 
 	uint64_t skiplen = 0;
 	if (strskiplen != "") {
-		skiplen = parse_number(strskiplen.c_str(), error);
+		skiplen = StringHelper::ParseNumber(strskiplen.c_str(), error);
 		if (error) {
 			messages << "could not parse skiplen\n";
 			return false;
@@ -179,7 +133,7 @@ bool FileLoader_raw::LoadIntoComponent(refcount_ptr<Component> component, ostrea
 
 	uint64_t initialpc = vaddr;
 	if (strinitialpc != "") {
-		initialpc = parse_number(strinitialpc.c_str(), error);
+		initialpc = StringHelper::ParseNumber(strinitialpc.c_str(), error);
 		if (error) {
 			messages << "could not parse initialpc\n";
 			return false;
